{{$NEXT}}

- repository migrated to the github moose organization

0.27   2013-03-28

- The latest Moose release (2.08) broke this module. This release fixes
  MooseX::ClassAttribute to work with both new and old Mooses. Reported by
  Jonathan Stowe. RT #84263.


0.26   2011-06-06

- The default() method for class attributes always returned a value, even if
  the default was a subroutine ref, which isn't how the method works for
  regular attributes. This broke inlining with Moose HEAD.


0.25   2011-06-05

- Class attributes now have a definition context set, which means that errors
  thrown from generated methods associated with these attributes say something
  like "X at accessor MyClass::ClassAttribute (defined at path/to/file line
  42)" rather than "generated method (unknown origin)".


0.24   2011-02-22

- This release provides forward compatibility with Moose 1.99+. It will still
  work with Moose 1.23 as well. Partially based on work originally done by
  Moritz Onken.


0.23   2011-02-13

- Fixed a bug where applying a role with class attributes didn't record the
  role as actually being applied in the meta class (or role) to which it was
  applied. Reported by Karen Etheridge. RT #59610.

- Applying multiple roles to a class lost all class attributes from those
  roles. Fixed by Andrew Rodland. RT #59572.


0.22   2011-02-02

- Explicitly require namespace::clean 0.20 to avoid some bad interactions
  between namespace::clean and Package::Stash.


0.21   2010-10-29

- Switch from Test::Exception to Test::Fatal.


0.20   2010-10-07

- A test file tried to load MooseX::Role::Parameterized, which was not listed
  as a dep. Reported by Andreas Koenig. RT #61957.


0.19   2010-10-06

- Removed references to MooseX::ClassAttribute::Meta::Method::Accessor, which
  was removed in 0.18. This caused lots of test failures if you hadn't
  installed a previous version of this distribution.


0.18   2010-10-05

- Changes to work with (and require) Moose 1.15.

